<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home_text"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/bookings"
        android:title="@string/booking_text"
        android:icon="@drawable/ic_bookings"/>

    <item
        android:id="@+id/news"
        android:title="@string/news_feed"
        android:icon="@drawable/ic_news_feed"/>
    <item
        android:id="@+id/searches"
        android:title="@string/latest_search"
        android:icon="@drawable/ic_latest_search"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings_text"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@+id/logout"
        android:title="@string/log_out"
        android:icon="@drawable/ic_log_out"/>

</menu>