<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="235dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="@string/welcome"
        android:textAppearance="@style/text_style1"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/after_welcome_text"
        android:layout_width="146dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="85dp"
        android:text="@string/text_after_welcome"
        android:textAppearance="@style/text_style2"
        android:gravity="top"/>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="185dp"
        android:hint="@string/email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text_style3"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="245dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/pword"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etpass"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text_style3"
                android:inputType="textPassword"
               />
        </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pword_text"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="137dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="310dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_pword"
        android:gravity="top"
        android:textAppearance="@style/text_style4"
        />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="280dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="375dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blue_background"
        android:textColor="@color/button_text_color"
        android:textSize="15sp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/sign_up_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="83dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="439dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/text_style5"
        android:onClick="onSignUpClicked"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="@id/sign_up_textView"
        android:layout_alignParentEnd="@id/sign_up_textView"
        android:layout_marginStart="135dp"
        android:layout_marginTop="440dp"
        android:text="@string/no_account"
        android:textSize="12.5sp" />

</RelativeLayout>