<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/register"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="49dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:text="@string/register"
        android:textAppearance="@style/text_style1"
        android:gravity="top"/>

    <TextView
        android:id="@+id/to_get"
        android:layout_width="171dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="49dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:text="@string/text_after_register"
        android:textAppearance="@style/text_style2"
        android:gravity="top"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:hint="@string/first_name"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etfirstname"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text_style3"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="215dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/last_name"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etlastname"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text_style3"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="265dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/other_names"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etothername"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text_style3"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="315dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_two"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etemail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text_style3"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="365dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/pword_two"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etpassword"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text_style3"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="280dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="445dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blue_background"
        android:textColor="@color/button_text_color"
        android:textSize="15sp"
        android:text="@string/sign_up_two"
        android:textAllCaps="false"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/sign_in_google"
        android:layout_width="280dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="545dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/green_background"
        android:textColor="@color/button_text_color"
        android:textSize="15sp"
        android:text="@string/sign_in_google"
        android:textAllCaps="false"
        android:textStyle="bold">
    </Button>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="69dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="558dp"
        android:src="@drawable/search_google"
        android:elevation="4dp"
        />
    <TextView
        android:id="@+id/sign_up_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="83dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="625dp"
        android:text="@string/sign_in_two"
        android:textAppearance="@style/text_style5"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="@id/sign_up_textView"
        android:layout_alignParentEnd="@id/sign_up_textView"
        android:layout_marginStart="130dp"
        android:layout_marginTop="627dp"
        android:text="@string/no_account_two"
        android:textSize="12.5sp" />

</RelativeLayout>